# arduino-mock

./: .gitignore  CMakeLists.txt  README.md  mock-digital-pin.drawio
src/: AnalogPinMock.h  Arduino.h  CMakeLists.txt  EEPROM.cpp  EEPROM.h  PinMock.cpp  PinMock.h  SerialStub.cpp  SerialStub.h  String.cpp  String.h  arduino_stubs.cpp
src/avr/: wdt.h
tests/: CMakeLists.txt  arduino_mock_tests.cpp  makefile
